--- a/BE/slotifyBE/templates/userRegister.html
+++ b/BE/slotifyBE/templates/userRegister.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registration Page</title>
+  <link rel="icon" href="https://i.postimg.cc/9FDXtjBK/Logo.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -58,9 +59,11 @@
         <input type="file" id="profileImage" accept="image/*" class="w-full p-3 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400" required>
       </div>
 
-      <button type="submit" class="w-full bg-blue-500 hover:bg-blue-600 text-white font-medium py-3 rounded focus:outline-none focus:ring-2 focus:ring-blue-400">
+      <button type="submit" class="w-48 bg-[#1e81b0] hover:bg-[#154c79] text-white font-medium py-3 rounded focus:outline-none focus:ring-2 focus:ring-[#1e81b0]">
         Register Now
       </button>
+      
+      
     </form>
   </div>
 
