unit testing for parking lot registration and layout, Developed frontend for parking lot registration,

--- a/BE/slotifyBE/templates/landing.html
+++ b/BE/slotifyBE/templates/landing.html
@@ -80,7 +80,7 @@
         <p>Find affordable parking spaces quickly and efficiently.</p>
         <div class="buttons">
             <a href="{% url 'userRegister' %}" class="button">Register Now</a>
-            <a href="{% url 'get_parking_lots' %}" class="button">Sign In</a>
+            <a href="{% url 'userSignIn' %}" class="button">Sign In</a>
         </div>
     </div>
 </body>
